@@ -3,6 +3,9 @@ Changelog
 
 5.5-dev - (unreleased)
 ----------------------
+* Bug fix: load geotagsClusterLayer using dojo.require instead of loading it 
+  with portal_javascripts
+  [ichimdav #14039]
 
 5.4 - (2013-01-25)
 ------------------
